<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AeroDoc</string>
    <string name="aerodoc">AeroDoc</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="status">Status:</string>
    <string name="available_leads">Available leads:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="aerogear_logo">AeroGear Logo</string>
    <string name="wait">Wait...</string>
    <string name="loging">Loging</string>
    <string name="retreving_leads">Retrieving leads</string>
    <string name="updating_status">Updating status</string>
    <string name="error_message">An error occurred while attempting to perform this operation</string>
    <string name="updating_lead">Updating lead</string>
    <string name="availables">Availables</string>
    <string name="accepted">Accepted</string>
    <string name="cant_be_blank">Can\'t be blank</string>
    <string name="accept">Accept</string>
    <string name="dismiss">Dismiss</string>
    <string name="available">Available</string>
    <string name="location_denied">Without permission the app can\'t track movement</string>
    <string name="ask_again">Ask me again</string>
    <string name="request_location_never_ask_again">Okay, we\'re not gonna piss you off anymore.</string>
    <string name="channel_name">Push Channel</string>
    <string name="channel_description">Notifications from Push Service</string>

    <string-array name="status">
        <item>STANDBY</item>
        <item>WITH_CLIENT</item>
        <item>PTO</item>
    </string-array>
</resources>
